--- a/deb/openmediavault-iscsitarget/usr/share/openmediavault/locale/uk_UK/openmediavault-iscsitarget.po
+++ b/deb/openmediavault-iscsitarget/usr/share/openmediavault/locale/uk_UK/openmediavault-iscsitarget.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-10-04 11:46+0000\n"
+"PO-Revision-Date: 2016-10-09 07:37+0000\n"
 "Last-Translator: zubr139\n"
 "Language-Team: Ukrainian (http://www.transifex.com/votdev/openmediavault/language/uk/)\n"
 "MIME-Version: 1.0\n"
@@ -48,16 +48,16 @@ msgstr "Коментар"
 msgid ""
 "Controls the maximum number of data transfers the target may request at "
 "once."
-msgstr ""
+msgstr "Керує максимальною кількістю передачі даних, яку мета може вимагати відразу."
 
 msgid "Data PDU in order"
-msgstr ""
+msgstr "PDU дані в порядку"
 
 msgid "Data digest"
 msgstr "Огляд даних"
 
 msgid "Data sequence in order"
-msgstr ""
+msgstr "Послідовність даних у порядку"
 
 msgid "Device"
 msgstr "Пристрій"
@@ -69,7 +69,7 @@ msgid "Edit LUN"
 msgstr "Редагувати LUN"
 
 msgid "Edit target"
-msgstr ""
+msgstr "Змінити ціль"
 
 msgid "Edit user"
 msgstr "Редагування користувача"
@@ -96,7 +96,7 @@ msgid "General settings"
 msgstr "Загальні налаштування"
 
 msgid "Header digest"
-msgstr ""
+msgstr "Огляд заголовка"
 
 msgid "IO threads"
 msgstr "IO потоки"
@@ -114,32 +114,32 @@ msgid ""
 "If a non-zero 'NOP interval' is used to periodically 'ping' the initiator "
 "during phases of inactivity (i.e. no data transfers), the initiator must "
 "respond within N seconds, otherwise the connection will be closed."
-msgstr ""
+msgstr "Якщо нульове 'ТІЛЬКИ ДЛЯ ВКАЗАНИХ ЦІЛЕЙ інтервал' використовується, щоб періодично 'перевірити за допомогою ping-запитів' ініціатора під час фаз неактивності (тобто немає передачі даних), ініціатор повинен відповісти протягом N секунд, в іншому випадку буде закрито."
 
 msgid ""
 "If enabled, the initiator has to wait for the target to solicit SCSI data "
 "before sending it. Disabling it allows the initiator to send a burst of N "
 "bytes unsolicited right after and/or together with the command. Thus "
 "disabling it may improve performance."
-msgstr ""
+msgstr "Якщо включено, ініціатор повинен очікувати мети, щоб вимагати даних SCSI перед його відправкою. Відключення дозволяє ініціатору відправляти пакет байтів N пропустити запитувати права після і / або разом з командою. Таким чином відключення його може поліпшити продуктивність."
 
 msgid ""
 "If set to 'CRC32C' and the initiator is configured accordingly, the "
 "integrity of an iSCSI PDU's data segment will be protected by a CRC32C "
 "checksum."
-msgstr ""
+msgstr "Якщо встановлено в 'CRC32C' і ініціатор налаштований відповідно, цілісність сегмента даних PDU iSCSI буде захищено контрольною сумою CRC32C."
 
 msgid ""
 "If set to 'CRC32C' and the initiator is configured accordingly, the "
 "integrity of an iSCSI PDU's header segments will be protected by a CRC32C "
 "checksum."
-msgstr ""
+msgstr "Якщо встановлено в 'CRC32C' і ініціатор налаштований відповідно, цілісність iSCSI, сегменти заголовка PDU будуть захищені контрольною сумою CRC32C."
 
 msgid ""
 "If value is non-zero, the initiator will be 'ping'ed during phases of "
 "inactivity (i.e. no data transfers) every N seconds to verify the connection"
 " is still alive."
-msgstr ""
+msgstr "Якщо значення дорівнює нулю, то ініціатор не буде пінгуватися під час фази простою (тобто немає передачі даних) кожні N секунд, щоб перевірити що з'єднання все ще живе."
 
 msgid "Immediate data"
 msgstr "Поточні дані"
@@ -160,16 +160,16 @@ msgid "Max. connections"
 msgstr "Максимум з'єднать"
 
 msgid "Max. outstanding R2T"
-msgstr ""
+msgstr "Максимум невирішених R2T"
 
 msgid "Max. receive data segment length"
-msgstr ""
+msgstr "Максимальна довжина отримувача сегмента даних"
 
 msgid "Max. sessions"
 msgstr "Максимум сесій"
 
 msgid "Max. transmit data segment length"
-msgstr ""
+msgstr "Максимальна довжина передавача сегмента даних"
 
 msgid "NOP interval"
 msgstr "Інтервал NOP"
@@ -181,7 +181,7 @@ msgid "None"
 msgstr "Немає"
 
 msgid "Only one outgoing user per target is supported."
-msgstr ""
+msgstr "Тільки один вихідний користувач для мети підтримується."
 
 msgid "Outgoing"
 msgstr "Вихідний"
@@ -210,18 +210,18 @@ msgstr "Оберіть пристрій ..."
 msgid ""
 "Sets the amount of unsolicited data the initiator may transmit in the first "
 "burst of a transfer either with and/or right after the command."
-msgstr ""
+msgstr "Встановлює кількість не запрошених даних, які ініціатор може передати в першому пакеті або/і відразу після команди."
 
 msgid ""
 "Sets the maximum amount of either unsolicited or solicited data the "
 "initiator may send in a single burst."
-msgstr ""
+msgstr "Встановлює максимальну кількість небажаних або запитаних даних які ніціатор може посилати в одному пакеті."
 
 msgid "Sets the maximum data segment length that can be received."
 msgstr "Задає максимальну довжину сегмента даних, які можуть бути отримані."
 
 msgid "Sets the maximum data segment length that can be sent."
-msgstr ""
+msgstr "Встановлює максимальну довжину сегмента даних, які можуть бути відправлені."
 
 msgid "Settings"
 msgstr "Налаштування"
@@ -233,12 +233,12 @@ msgid "The identifier of the target."
 msgstr "Ідентифікатор призначення."
 
 msgid "The maximum number of sessions for this target."
-msgstr ""
+msgstr "Максимальна кількість сеансів для цієї мети."
 
 msgid ""
 "The number of commands an initiator may send and that will be buffered by "
 "the target."
-msgstr ""
+msgstr "Кількість команд, які ініціатор може посилати і які будуть буфферезовані ціллю."
 
 msgid "The number of connections within a session."
 msgstr "Кількість з'єднань в сесії."
@@ -252,7 +252,7 @@ msgstr "Додатковий псевдонім мети."
 msgid ""
 "This allows the initiator to append unsolicited data to a command. To "
 "achieve better performance, this should be enabled."
-msgstr ""
+msgstr "Дозволяє ініціатору додавати незапрошених даних в команді. Для досягнення більш високої продуктивності, це повинно бути цвімкнено."
 
 msgid "Transfer mode"
 msgstr "Режим передачі"
