--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/cs_CZ/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/cs_CZ/openmediavault-lvm2.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-10-01 07:56+0000\n"
+"PO-Revision-Date: 2016-11-12 17:56+0000\n"
 "Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
@@ -84,7 +84,7 @@ msgid "Invalid name"
 msgstr "Neplatný název"
 
 msgid "Logical Volume Management"
-msgstr "Správa logických svazků"
+msgstr "Správa logických svazků (LVM)"
 
 msgid "Logical volumes"
 msgstr "Logické svazky"
