--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/de_DE/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/de_DE/openmediavault-netatalk.po
@@ -4,6 +4,7 @@
 # 
 # Translators:
 # mattjes04 <mattjes04@googlemail.com>, 2012
+# Stephan Steiner, 2016
 # Volker <votdev@gmx.de>, 2013-2014
 # Volker <votdev@gmx.de>, 2012
 # warhog <warhog@gmx.de>, 2012
@@ -12,8 +13,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-09-23 21:35+0200\n"
-"PO-Revision-Date: 2016-09-23 19:35+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-12-03 21:08+0000\n"
+"Last-Translator: Stephan Steiner\n"
 "Language-Team: German (http://www.transifex.com/votdev/openmediavault/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -67,7 +68,7 @@ msgid "Enable user home directories."
 msgstr "Aktiviere Heimatverzeichnisse für Benutzer."
 
 msgid "Enabled"
-msgstr ""
+msgstr "Aktiviert"
 
 msgid "Extra options"
 msgstr "Zusätzliche Optionen"
@@ -121,7 +122,7 @@ msgid ""
 "Please check the <a "
 "href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Bitte die <a href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' target='_blank'>Hilfeseiten</a> für weitere Details lesen. "
 
 msgid "Quota"
 msgstr "Quota"
