--- a/deb/openmediavault-shairport/usr/share/openmediavault/locale/nl_NL/openmediavault-shairport.po
+++ b/deb/openmediavault-shairport/usr/share/openmediavault/locale/nl_NL/openmediavault-shairport.po
@@ -3,14 +3,15 @@
 # This file is distributed under the same license as the openmediavault-shairport package.
 # 
 # Translators:
+# Milan Toet <milantoet@gmail.com>, 2016
 # Tim <co_ti@hotmail.com>, 2014,2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-09-24 19:04+0200\n"
-"PO-Revision-Date: 2016-09-24 17:04+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-10-09 20:06+0000\n"
+"Last-Translator: Milan Toet <milantoet@gmail.com>\n"
 "Language-Team: Dutch (Netherlands) (http://www.transifex.com/votdev/openmediavault/language/nl_NL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -45,4 +46,4 @@ msgstr "Shairport"
 msgid ""
 "The name the service will advertise to clients. Leave this field empty to "
 "use the hostname by default."
-msgstr ""
+msgstr "De service zal de naam aan cliënten adverteren. Laat dit gedeelte leeg om standaard de hostnaam te gebruiken."
