--- a/deb/openmediavault-shairport/usr/share/openmediavault/locale/ru_RU/openmediavault-shairport.po
+++ b/deb/openmediavault-shairport/usr/share/openmediavault/locale/ru_RU/openmediavault-shairport.po
@@ -4,14 +4,14 @@
 # 
 # Translators:
 # Alexander Savchenko, 2014
-# артур Мудрых <arturmon82@gmail.com>, 2014-2015
+# артур Мудрых <arturmon82@gmail.com>, 2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-09-24 19:04+0200\n"
-"PO-Revision-Date: 2016-09-24 17:04+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-10-10 15:45+0000\n"
+"Last-Translator: артур Мудрых <arturmon82@gmail.com>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/votdev/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -46,4 +46,4 @@ msgstr "Shairport"
 msgid ""
 "The name the service will advertise to clients. Leave this field empty to "
 "use the hostname by default."
-msgstr ""
+msgstr "Имя службы будет анонсироваться клиентам. Оставьте это поле пустым, чтобы использовать имя хоста по умолчанию."
