--- a/deb/openmediavault/usr/share/openmediavault/locale/da_DA/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/da_DA/openmediavault.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-10-09 21:33+0200\n"
-"PO-Revision-Date: 2016-10-09 19:34+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"POT-Creation-Date: 2016-12-06 06:19+0100\n"
+"PO-Revision-Date: 2016-12-07 06:32+0000\n"
+"Last-Translator: Stefan Thrane Overby <stoverby@gmail.com>\n"
 "Language-Team: Danish (http://www.transifex.com/votdev/openmediavault/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -125,8 +125,8 @@ msgstr "30 minutter"
 msgid "300 minutes"
 msgstr "300 minutter"
 
-msgid "360 minutes"
-msgstr "360 minutter"
+msgid "330 minutes"
+msgstr "330 minutter"
 
 msgid "4 days"
 msgstr "4 dage"
@@ -166,6 +166,9 @@ msgstr "ASCII"
 
 msgid "About"
 msgstr "Om"
+
+msgid "Absolute Path"
+msgstr "Absolut Sti"
 
 msgid "Abstract"
 msgstr "Abstrakt"
@@ -840,6 +843,9 @@ msgstr "Enhed"
 
 msgid "Device Mapper %s [%s, %s]"
 msgstr "Enheds Mapper %s [%s, %s]"
+
+msgid "Device Symlinks"
+msgstr "Enheds Symlinks"
 
 msgid "Device has a few bad sectors"
 msgstr "Enheden har få dårlige sektorer"
@@ -2050,6 +2056,9 @@ msgstr "Morocco"
 msgid "Mount"
 msgstr "Monter"
 
+msgid "Mount Point"
+msgstr "Monterings Punkt"
+
 msgid "Mounted"
 msgstr "Monteret"
 
@@ -2087,7 +2096,7 @@ msgid "Network"
 msgstr "Netværk"
 
 msgid "Network Interfaces"
-msgstr ""
+msgstr "Netværk Interfaces"
 
 msgid "Network interfaces"
 msgstr "Netværk interfaces"
@@ -2622,6 +2631,9 @@ msgstr "Refereres"
 msgid "Refresh"
 msgstr "Genopfrisk"
 
+msgid "Relative Path"
+msgstr "Relativ Sti"
+
 msgid "Reload"
 msgstr "Genindlæs"
 
@@ -2738,6 +2750,9 @@ msgstr "S.M.A.R.T. oplysninger"
 
 msgid "S.M.A.R.T. monitoring must be activated for the selected device."
 msgstr "S.M.A.R.T. overvågning skal være aktiveret for den valgte enhed."
+
+msgid "S/N"
+msgstr "S/N"
 
 msgid "SMB/CIFS"
 msgstr "SMB/CIFS"
