--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.56) stable; urgency=low
+
+  * Improve filter to get S.M.A.R.T. device settings.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 12 Dec 2016 19:53:24 +0100
+
 openmediavault (3.0.55) stable; urgency=low
 
   * Update locales.
