--- a/deb/openmediavault-nut/debian/changelog
+++ b/deb/openmediavault-nut/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-nut (3.2.5) stable; urgency=low
+
+  * Fix bug in udev rule creation.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 16 Dec 2016 13:40:16 +0100
+
 openmediavault-nut (3.2.4) stable; urgency=low
 
   * Update locales.
