--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-netatalk (3.2.4) stable; urgency=low
+
+  * Update locales.
+  * Fix bug in configuration build scripts.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 18 Dec 2016 12:03:43 +0100
+
 openmediavault-netatalk (3.2.3) stable; urgency=low
 
   * Update locales.
