--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -2,6 +2,8 @@ openmediavault-netatalk (3.2.4) stable; urgency=low
 
   * Update locales.
   * Fix bug in configuration build scripts.
+  * Mantis 0001653: Home exports fail due to double slash at the end of
+    the home path.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 18 Dec 2016 12:03:43 +0100
 
