--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-12-06 06:19+0100\n"
-"PO-Revision-Date: 2016-12-06 05:21+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-12-13 07:08+0000\n"
+"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -127,7 +127,7 @@ msgid "300 minutes"
 msgstr "300 perc"
 
 msgid "330 minutes"
-msgstr ""
+msgstr "330 perc"
 
 msgid "4 days"
 msgstr "4 nap"
@@ -169,7 +169,7 @@ msgid "About"
 msgstr "Névjegy"
 
 msgid "Absolute Path"
-msgstr ""
+msgstr "Abszolút elérési út "
 
 msgid "Abstract"
 msgstr "Absztrakt"
@@ -846,7 +846,7 @@ msgid "Device Mapper %s [%s, %s]"
 msgstr "Eszköz mappaló %s [%s, %s]"
 
 msgid "Device Symlinks"
-msgstr ""
+msgstr "Symlink eszköz"
 
 msgid "Device has a few bad sectors"
 msgstr "Az eszközön néhány hibás szektor található"
@@ -2058,7 +2058,7 @@ msgid "Mount"
 msgstr "Csatolás"
 
 msgid "Mount Point"
-msgstr ""
+msgstr "Csatolási pont"
 
 msgid "Mounted"
 msgstr "Csatolva"
@@ -2633,7 +2633,7 @@ msgid "Refresh"
 msgstr "Frissítés"
 
 msgid "Relative Path"
-msgstr ""
+msgstr "Relatív elérési út"
 
 msgid "Reload"
 msgstr "Újratöltés"
@@ -2753,7 +2753,7 @@ msgid "S.M.A.R.T. monitoring must be activated for the selected device."
 msgstr "S.M.A.R.T. ellenőrzésnek aktívnak kell lennie a kiválasztott meghajtón."
 
 msgid "S/N"
-msgstr ""
+msgstr "S/N"
 
 msgid "SMB/CIFS"
 msgstr "SMB/CIFS"
