--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (3.0.57) stable; urgency=low
 
+  * Update locales.
   * Various improvements and bugfixes.
   * Fix unicode issue in data model format.
 
