--- a/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
@@ -14,8 +14,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-12-06 06:19+0100\n"
-"PO-Revision-Date: 2016-12-06 05:21+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-12-16 10:26+0000\n"
+"Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/votdev/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -131,7 +131,7 @@ msgid "300 minutes"
 msgstr "300 minuti"
 
 msgid "330 minutes"
-msgstr ""
+msgstr "330 minuti"
 
 msgid "4 days"
 msgstr "4 giorni"
@@ -173,7 +173,7 @@ msgid "About"
 msgstr "Informazioni su"
 
 msgid "Absolute Path"
-msgstr ""
+msgstr "Path assoluta"
 
 msgid "Abstract"
 msgstr "Sommario"
@@ -850,7 +850,7 @@ msgid "Device Mapper %s [%s, %s]"
 msgstr "Dispositivo Mapper %s [%s, %s]"
 
 msgid "Device Symlinks"
-msgstr ""
+msgstr "Link simbolici dispositivo"
 
 msgid "Device has a few bad sectors"
 msgstr "Il dispositivo ha pochi settori danneggiati"
@@ -2062,7 +2062,7 @@ msgid "Mount"
 msgstr "Mount"
 
 msgid "Mount Point"
-msgstr ""
+msgstr "Punto di Mount"
 
 msgid "Mounted"
 msgstr "Montate"
@@ -2637,7 +2637,7 @@ msgid "Refresh"
 msgstr "Ricarica"
 
 msgid "Relative Path"
-msgstr ""
+msgstr "Path relativa"
 
 msgid "Reload"
 msgstr "Ricarica"
@@ -2757,7 +2757,7 @@ msgid "S.M.A.R.T. monitoring must be activated for the selected device."
 msgstr "Il monitoraggio S.M.A.R.T. deve essere attivato per il dispositivo selezionato."
 
 msgid "S/N"
-msgstr ""
+msgstr "S/N"
 
 msgid "SMB/CIFS"
 msgstr "SMB/CIFS"
