--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.58) stable; urgency=low
+
+  * Various improvements and bugfixes.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 19 Dec 2016 22:04:23 +0100
+
 openmediavault (3.0.57) stable; urgency=low
 
   * Update locales.
