--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-netatalk (3.2.5) stable; urgency=low
+
+  * 
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 21 Dec 2016 00:26:27 +0100
+
 openmediavault-netatalk (3.2.4) stable; urgency=low
 
   * Update locales.
