--- a/vagrant/README
+++ b/vagrant/README
@@ -1,4 +1,5 @@
 1. Download Vagrant from https://www.vagrantup.com/downloads.html
 
 2. Install plugins
+$ vagrant plugin install vagrant-vbguest
 $ vagrant plugin install vagrant-cachier
